2016-01-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================

        Load CTA GTI extension from the HDU name provided by the DSS keyword (#1598).


2016-01-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 1.0.1 released
        ================================

        Add units to CTA event list columns (#1616)
        Allow usage of numbers in FITS extension names (#1611)
        Solve compatibility issues with Anaconda on Mac OS X (#1607)


2015-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.0.0 released
        =========================

        Ignore errors for El Capitan post processing (#1605)
        Read only mandatory columns in GCTAEventList (#1600)
        Remove extname arguments from classes (#1601)
        Add GFilename class (#1599)
        Check existence of files in CTA response loading (#1586)
        GSkyMap::__getitem__ throw exception if out of bound (#1581)
        Handle ~ in filenames (#1580)
        Add GModel::has_ts() method (#1578)
        Perform __init__.py creation only in build step (#1569)
        Remove access by name methods from GSkyRegions (#1564)
        Resolve Python test problem on El Capitan (#1563)


2015-10-28  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.11.0 released
        =========================

        Add need_help() method to GApplication (#572)
        Correct GModelSpatialDiffuseCube computations (#1559)
        Add save() and write() methods to GModelSpatialDiffuseCube
        Add interval constructor and set methods to GEnergies class
        Add Python unit test function to gammalib module (#1486)
        Increase CTA IRF integration precision for shell model (#1521)
        Correctly handle MC simulations for unnormalized diffuse maps (#1548)
        Improve precision of shell model in unbinned analysis (#1521)